--- a/app/static/css/custom-styles.css
+++ b/app/static/css/custom-styles.css
@@ -14,7 +14,7 @@ html, body {
 	line-height:18px;
 	height: 100%;
  }
-body {background: #f9f9f9 url(../img/page-bg-1.jpg);}
+body {background: #f9f9f9 url(../img/stock/page-bg-1.jpg);}
 
 .main-container {
 	height:auto; 
@@ -183,7 +183,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu{ display: block; }
 / Slider
 **************************************/
 .carousel-caption h4 { font-size: 14px; text-shadow:none; }
-.carousel-caption {background: url(../img/post-item-hover.png);}
+.carousel-caption {background: url(../img/stock/post-item-hover.png);}
 .carousel-control {border: none; top: 177px;}
 
 
@@ -198,7 +198,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu{ display: block; }
 .gallery-hover-3col,
 .gallery-hover-4col-cir { 
 	display:none; 
-	background:url(../img/gallery-item-hover.png);
+	background:url(../img/stock/gallery-item-hover.png);
 	position:absolute; 
 	z-index: 10;
 }
@@ -338,7 +338,7 @@ ul.nav li.dropdown:hover ul.dropdown-menu{ display: block; }
 a.item-zoom-link { 
 	height: 42px;
 	width: 42px;
-	background: #ffffff url(../img/gallery-item-icons.png) no-repeat;
+	background: #ffffff url(../img/stock/gallery-item-icons.png) no-repeat;
 	background-position: 0px 0px;
 	position:absolute;
 	display: block;
@@ -346,14 +346,14 @@ a.item-zoom-link {
 a.item-details-link { 
 	height: 42px;
 	width: 42px;
-	background: #ffffff url(../img/gallery-item-icons.png) no-repeat;
+	background: #ffffff url(../img/stock/gallery-item-icons.png) no-repeat;
 	background-position: -42px 0px;
 	position:absolute; 
 	left: 47px;
 	display: block;
 }
-a.item-zoom-link:hover {background: #d8450b url(../img/gallery-item-icons.png) no-repeat;}
-a.item-details-link:hover {background: #d8450b url(../img/gallery-item-icons.png) no-repeat; background-position: -42px 0px;}
+a.item-zoom-link:hover {background: #d8450b url(../img/stock/gallery-item-icons.png) no-repeat;}
+a.item-details-link:hover {background: #d8450b url(../img/stock/gallery-item-icons.png) no-repeat; background-position: -42px 0px;}
 
 .gallery-post-grid {margin:0px;}
 .gallery-post-grid li {list-style: none; float: left; margin-bottom: 30px;}
@@ -448,7 +448,7 @@ ul.post-data li:last-child {padding-right: 0px;}
 .blog-post-hover { 
 	display:none; 
 	width:270px; height:220px;
-	background:url(../img/post-item-hover.png);
+	background:url(../img/stock/post-item-hover.png);
 	position:absolute; 
 	z-index: 10;
 }
@@ -631,7 +631,7 @@ ul.img-feed li {
 	.social-icons li:last-child {display:none;}
 }
 a.social-icon { 
-	background: url(../img/social-icons.png);
+	background: url(../img/stock/social-icons.png);
 	display: block; 
 	width: 46px; 
 	height: 46px;
@@ -683,7 +683,7 @@ a.accordion-toggle{background: #f5f5f5;}
 #toTop {
 	width:47px;
 	height:47px;
-	background:url(../img/back-top-btn.png) no-repeat;
+	background:url(../img/stock/back-top-btn.png) no-repeat;
 	text-align:center;
 	position:fixed;
 	bottom:25px;
@@ -747,7 +747,7 @@ a.accordion-toggle{background: #f5f5f5;}
 	width: 100px; 
 	height: 100px;
 	position: absolute;
-	background: url(../img/rnd-client-mask.png);
+	background: url(../img/stock/rnd-client-mask.png);
 }
 .client-logos {margin: 20px 0px 0px 0px;}
 .client-logos li {list-style: none; float: left; margin: 0px 7px;}
