Fun Runs pages almost done

--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -20,6 +20,13 @@
 
 <!-- Favicons
 ================================================== -->
+<link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/icon.jpg') }}">
+
+<!-- Favicons
+================================================== -->
 <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
 <link rel="apple-touch-icon" href="{{ url_for('static', filename='img/apple-touch-icon.png') }}">
 <link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/apple-touch-icon-72x72.png') }}">
@@ -131,14 +138,14 @@
                     </div>
                     <h5>Kurt Bixby</h5>
                     <p>
-                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
-                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/kurtbixby"> Click Here</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:kurtbixby@mac.com"> kurtbixby@mac.com</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
-                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
-                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
-                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
-                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
-                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> November 10, 1991<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Alternative, Electronic, Rock, Grunge<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Video Games, Board Games, Music, Seattle Seahawks<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "They don't think it be like it is, but it do." -Abraham Lincoln<br/>
                     </p>
                 </div>
                 <div class="span4">
@@ -198,13 +205,13 @@
                     <h5>Hector Garcia</h5>
                     <p>
                         <i class="icon-user"></i><strong>LinkedIn:</strong> <a href="http://www.linkedin.com/in/anwilliams93"> Click Here</a><br/>
-                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:anwilliams93@gmail.com"> anwilliams93@gmail.com</a><br/>
+                        <i class="icon-envelope"></i><strong>Email:</strong> <a href="mailto:hectuanerz@gmail.com"> hectuanerz@gmail.com</a><br/>
                         <i class="icon-pencil"></i><strong>Major:</strong> Computer Science<br/>
-                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2016<br/>
-                        <i class="icon-gift"></i><strong>Birthday:</strong> April 27, 1993<br/>
-                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Classic Rock, Kpop<br/>
-                        <i class="icon-heart"></i><strong>Loves:</strong> Cats, Friendship That's Magic, Gaming, Grandma, Doctor Who, Board Games<br/>
-                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Defridgerators: where it just makes things more warm." -Kurt Bixby<br/>
+                        <i class="icon-calendar"></i><strong>Graduation Date:</strong> May 2015<br/>
+                        <i class="icon-gift"></i><strong>Birthday:</strong> August 5, 1993<br/>
+                        <i class="icon-headphones"></i><strong>Favorite Music:</strong> Spanish Rock, EDM, Hip Hop<br/>
+                        <i class="icon-heart"></i><strong>Loves:</strong> Soccer, Super Smash Brothers, Dragonball<br/>
+                        <i class="icon-comment"></i><strong>Favorite Quote: </strong> "Every force you create has an echo. Your own bad energy will be your undoing" -Super Gogeta<br/>
                     </p>
                 </div>
             </div>
