--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -18,6 +18,13 @@
     <link rel="stylesheet" href="css/style-ie.css"/>
 <![endif]--> 
 
+<!-- Favicons
+================================================== -->
+<link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/icon.jpg') }}">
+
 <!-- JS
 ================================================== -->
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
@@ -109,7 +116,7 @@
                             <img src="{{ url_for('static', filename='img/challengesPhotos/oddGround1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Running On Odd Ground</a>Ice, Inflatable Balls, and Mud.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Running On Awkward Ground</a>Examples: Ice, Inflatable Balls, Mud</span>
                     </li>
 
                     <!-- Gallery Item 2 -->
@@ -121,7 +128,7 @@
                             <img src="{{ url_for('static', filename='img/challengesPhotos/costume1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Running In A Costume</a>Mascot Costumes, Halloween Outfits, Tutus, Nude, and Banana Outfit.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Running In A Costume</a>Examples: Mascot Costumes, Halloween Outfits, Tutus, Nude, and Banana Outfit.</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
