--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -21,10 +21,10 @@
 
 <!-- Favicons
 ================================================== -->
-<link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}">
-<link rel="apple-touch-icon" href="{{ url_for('static', filename='img/apple-touch-icon.png') }}">
-<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/apple-touch-icon-72x72.png') }}">
-<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/apple-touch-icon-114x114.png') }}">
+<link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/icon.jpg') }}">
 
 <!-- JS
 ================================================== -->
