--- a/app/templates/locations.html
+++ b/app/templates/locations.html
@@ -18,6 +18,13 @@
     <link rel="stylesheet" href="css/style-ie.css"/>
 <![endif]--> 
 
+<!-- Favicons
+================================================== -->
+<link rel="shortcut icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" sizes="72x72" href="{{ url_for('static', filename='img/icon.jpg') }}">
+<link rel="apple-touch-icon" sizes="114x114" href="{{ url_for('static', filename='img/icon.jpg') }}">
+
 <!-- JS
 ================================================== -->
 <script src="http://code.jquery.com/jquery-1.8.3.min.js"></script>
@@ -90,7 +97,7 @@
             <div class="span12">
                 <h2 class="title-bg"> Map of fun</h2>
 
-              <iframe src="https://mapsengine.google.com/map/embed?mid=z2e_3jYGktFU.kvMIujBcWI-A" style="width: 80vw; height: 40vw; border: none"></iframe>
+              <iframe src="https://mapsengine.google.com/map/embed?mid=z2e_3jYGktFU.kvMIujBcWI-A" style="width: 100%; height: 40vw; border: none"></iframe>
             </div>
         </div>
 
@@ -117,7 +124,7 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/baltimoreMDLanding.jpg') }}" alt="Gallery">
                         </div>
                       </a>
@@ -129,7 +136,7 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/clevelandOHLanding.jpg') }}" alt="Gallery">
                         </div>
                       </a>
@@ -141,7 +148,7 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/landing/locations/dallasTXLanding.jpg') }}" alt="Gallery">
                         </div>
                       </a>
