--- a/app/templates/challenges.html
+++ b/app/templates/challenges.html
@@ -112,7 +112,7 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/challengesPhotos/oddGround1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
@@ -124,11 +124,11 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/challengesPhotos/costume1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Running In A Costume</a>Examples: Mascot Costumes, Halloween Outfits, Tutus, Nude, and Banana Outfit.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Running In A Costume</a>Examples: Mascots, Nude, Speedos, Costumes</span>
                     </li>
 
                     <!-- Gallery Item 3 -->
@@ -136,11 +136,11 @@
                       <a href="/">
                         <span class="gallery-hover-3col hidden-phone hidden-tablet">
                         </span>
-                        <div style="height: 300px; width: 370px; overflow: hidden">
+                        <div style="max-height: 300px; max-width: 370px; overflow: hidden">
                             <img src="{{ url_for('static', filename='img/challengesPhotos/cold1.jpg') }}" alt="Gallery">
                         </div>
                       </a>
-                      <span class="project-details"><a href="gallery-single.htm">Running In Cold Weather</a>Snow, Ice, Freezing, and Temperatures.</span>
+                      <span class="project-details"><a href="gallery-single.htm">Running In Cold Weather</a>Examples: Snow, Ice, Freezing Temperatures</span>
                     </li>
                 </ul>
             </div>
